// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decorator term getter array can be initialized with multiple values: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://xmlns.com/foaf/0.1/name> \\"bar\\" .
<http://example.com/res> <http://xmlns.com/foaf/0.1/name> \\"foo\\" .
"
`;

exports[`decorator term getter array can be initialized: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://xmlns.com/foaf/0.1/name> \\"bar\\" .
"
`;

exports[`decorator term getter rdf list can be initialized with multiple values: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://xmlns.com/foaf/0.1/name> _:c14n0 .
_:c14n0 <http://www.w3.org/1999/02/22-rdf-syntax-ns#first> \\"foo\\" .
_:c14n0 <http://www.w3.org/1999/02/22-rdf-syntax-ns#rest> _:c14n1 .
_:c14n1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#first> \\"bar\\" .
_:c14n1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#rest> <http://www.w3.org/1999/02/22-rdf-syntax-ns#nil> .
"
`;

exports[`decorator term getter rdf list can be initialized: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://xmlns.com/foaf/0.1/name> _:c14n0 .
_:c14n0 <http://www.w3.org/1999/02/22-rdf-syntax-ns#first> \\"bar\\" .
_:c14n0 <http://www.w3.org/1999/02/22-rdf-syntax-ns#rest> <http://www.w3.org/1999/02/22-rdf-syntax-ns#nil> .
"
`;

exports[`decorator term getter strict can be initialized: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://xmlns.com/foaf/0.1/name> \\"bar\\" .
"
`;

exports[`decorator term initial sets initial value from clownface object: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://schema.org/name> _:c14n0 .
"
`;

exports[`decorator term initial sets initial value from function: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://schema.org/name> <http://example.com/res/child> .
"
`;

exports[`decorator term initial sets initial value from node: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://schema.org/name> \\"foo\\" .
"
`;

exports[`decorator term over multiple graphs constructed from clownface graph initial sets initial values in self graph: toMatchSnapshot 1`] = `
"<http://example.com/John> <http://xmlns.com/foaf/0.1/knows> <http://example.com/Holly> <http://example.com/John> .
"
`;

exports[`decorator term over multiple graphs constructed from clownface graph setter sets value to default graph if unspecified: toMatchSnapshot 1`] = `
"<http://example.com/John> <http://xmlns.com/foaf/0.1/knows> <http://example.com/Holly> .
<http://example.com/John> <http://xmlns.com/foaf/0.1/knows> <http://example.com/Sindy> <http://example.com/Sindy> .
<http://example.com/John> <http://xmlns.com/foaf/0.1/knows> <http://example.com/Will> <http://example.com/John> .
"
`;

exports[`decorator term over multiple graphs constructed from clownface graph setter sets value to same graph: toMatchSnapshot 1`] = `
"<http://example.com/John> <http://xmlns.com/foaf/0.1/knows> <http://example.com/Brad> .
<http://example.com/John> <http://xmlns.com/foaf/0.1/knows> <http://example.com/Holly> <http://example.com/John> .
<http://example.com/John> <http://xmlns.com/foaf/0.1/knows> <http://example.com/Sindy> <http://example.com/Sindy> .
"
`;

exports[`decorator term setter can replace literal with blank: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://xmlns.com/foaf/0.1/name> _:c14n0 .
_:c14n0 <http://example.com/first> \\"John\\" .
_:c14n0 <http://example.com/last> \\"Doe\\" .
_:c14n0 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.com/BlankNodeName> .
"
`;

exports[`decorator term setter can set array: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://xmlns.com/foaf/0.1/name> \\"Jan\\"@pl .
<http://example.com/res> <http://xmlns.com/foaf/0.1/name> \\"Jean\\"@fr .
"
`;

exports[`decorator term setter can set empty array, removing objects: toMatchSnapshot 1`] = `""`;

exports[`decorator term setter sets nil for empty rdf list: toMatchSnapshot 1`] = `
"<http://example.com/res> <http://xmlns.com/foaf/0.1/knows> <http://www.w3.org/1999/02/22-rdf-syntax-ns#nil> .
"
`;

exports[`decorator term setter sets value at paths of arbitrary length: toMatchSnapshot 1`] = `
"<http://example.com/factory> <http://xmlns.com/foaf/0.1/name> \\"Google\\" .
<http://example.com/friend> <http://example.com/worksAt> <http://example.com/factory> .
<http://example.com/res> <http://xmlns.com/foaf/0.1/friend> <http://example.com/friend> .
"
`;

exports[`decorator term setter setting null to rdf list removes triple: toMatchSnapshot 1`] = `""`;
